[gd_scene format=3 uid="uid://to2ahd3uam2y"]

[ext_resource type="Texture2D" uid="uid://cns7bajkyywpf" path="res://assets/ui/Box_WhiteOutline_Rounded.png" id="1_8gpdi"]
[ext_resource type="Script" uid="uid://c0dt2w4i1qg53" path="res://assets/ui/billboard_ui.gd" id="1_nvtjr"]
[ext_resource type="PackedScene" uid="uid://dotla25fifw5p" path="res://assets/ui/title.tscn" id="2_lt6lu"]
[ext_resource type="LabelSettings" uid="uid://s6pl6aep0dkr" path="res://assets/ui/controls.tres" id="3_mvqxu"]
[ext_resource type="PackedScene" uid="uid://bxwis5gpctryk" path="res://assets/ui/button_small_round.tscn" id="4_3g6j8"]
[ext_resource type="Texture2D" uid="uid://dqkbgb040ouwf" path="res://assets/ui/ButtonText_Small_Orange_Round.png" id="5_nvtjr"]
[ext_resource type="Texture2D" uid="uid://b086qh14deg3e" path="res://assets/ui/ButtonText_Small_GreyOutline_Round.png" id="6_33xu4"]

[node name="Billboard" type="Control" unique_id=2010033716 node_paths=PackedStringArray("name_input", "size_input")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 64.0
offset_bottom = -104.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nvtjr")
name_input = NodePath("Options/VBoxContainer/ShopName/MarginContainer2/NameInput")
size_input = NodePath("Options/VBoxContainer/Name Size/MarginContainer2/SizeInput")

[node name="Background" type="MarginContainer" parent="." unique_id=376569287]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.22200002
anchor_top = 0.05
anchor_right = 0.70100003
anchor_bottom = 0.90000004
offset_left = 0.25598145
offset_right = 0.447937
offset_bottom = -0.67611694
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Background" unique_id=2002047490]
layout_mode = 2
texture = ExtResource("1_8gpdi")
expand_mode = 1

[node name="Title" parent="." unique_id=519483638 instance=ExtResource("2_lt6lu")]
layout_mode = 1
offset_left = 216.0
offset_top = -32.0
offset_right = 216.0
offset_bottom = 193.0
title = &"SHOP"

[node name="Options" type="MarginContainer" parent="." unique_id=372912579]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -272.0
offset_top = -224.0
offset_right = 272.0
offset_bottom = 272.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 35

[node name="VBoxContainer" type="VBoxContainer" parent="Options" unique_id=400567830]
layout_mode = 2
theme_override_constants/separation = 50

[node name="ShopName" type="Control" parent="Options/VBoxContainer" unique_id=856484320]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Options/VBoxContainer/ShopName" unique_id=942350345]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -240.0
offset_top = 41.0
offset_right = -40.0
offset_bottom = 86.0
grow_horizontal = 2

[node name="InteractLabel" type="Label" parent="Options/VBoxContainer/ShopName/MarginContainer" unique_id=1835962036]
layout_mode = 2
text = "Shop Name"
label_settings = ExtResource("3_mvqxu")
horizontal_alignment = 2
vertical_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="Options/VBoxContainer/ShopName" unique_id=960706335]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 24.0
offset_top = 37.0
offset_right = 184.0
offset_bottom = 82.0
grow_horizontal = 2

[node name="NameInput" type="LineEdit" parent="Options/VBoxContainer/ShopName/MarginContainer2" unique_id=1899695410]
layout_mode = 2
placeholder_text = "Name"
alignment = 1
max_length = 20

[node name="Ellipses" type="Label" parent="Options/VBoxContainer/ShopName" unique_id=548154067]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.499
anchor_right = 0.499
offset_left = -39.455994
offset_top = 43.0
offset_right = 39.544006
offset_bottom = 88.0
text = "........."
label_settings = ExtResource("3_mvqxu")

[node name="Name Size" type="Control" parent="Options/VBoxContainer" unique_id=827542766]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Options/VBoxContainer/Name Size" unique_id=1592373349]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -240.0
offset_top = 41.0
offset_right = -40.0
offset_bottom = 86.0
grow_horizontal = 2

[node name="InteractLabel" type="Label" parent="Options/VBoxContainer/Name Size/MarginContainer" unique_id=429725692]
layout_mode = 2
text = "Name Size (px)"
label_settings = ExtResource("3_mvqxu")
horizontal_alignment = 2
vertical_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="Options/VBoxContainer/Name Size" unique_id=965319273]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 24.0
offset_top = 43.0
offset_right = 200.0
offset_bottom = 88.0
grow_horizontal = 2

[node name="SizeInput" type="SpinBox" parent="Options/VBoxContainer/Name Size/MarginContainer2" unique_id=567458111]
layout_mode = 2
rounded = true
allow_greater = true
alignment = 1
suffix = "px"

[node name="Ellipses" type="Label" parent="Options/VBoxContainer/Name Size" unique_id=287906397]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.499
anchor_right = 0.499
offset_left = -39.455994
offset_top = 43.0
offset_right = 39.544006
offset_bottom = 88.0
text = "........."
label_settings = ExtResource("3_mvqxu")

[node name="Button" parent="." unique_id=1857776466 node_paths=PackedStringArray("label", "button") instance=ExtResource("4_3g6j8")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.27800003
anchor_top = 0.61700004
anchor_right = 0.39400002
anchor_bottom = 0.75000006
offset_left = 295.74396
offset_top = -0.16003418
offset_right = 697.11194
offset_bottom = 185.99997
button_label = &"SAVE"
normal_texture = ExtResource("5_nvtjr")
pressed_texture = ExtResource("6_33xu4")
label = NodePath("Label")
button = NodePath("TextureButton")

[connection signal="text_changed" from="Options/VBoxContainer/ShopName/MarginContainer2/NameInput" to="." method="_on_name_input_text_changed"]
[connection signal="value_changed" from="Options/VBoxContainer/Name Size/MarginContainer2/SizeInput" to="." method="_on_size_input_value_changed"]
[connection signal="pressed" from="Button/TextureButton" to="." method="_on_save_button_pressed"]

[editable path="Button"]
